Improved plugin configuration